caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/refinement_missing_in.caffeine
Blueprints
  * "test":
    Requires { env: String { x | x { "a" } } }
    Provides { value: "x" }
